packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__let_variable_declaration__let x : boolean = (true).snap
---
source: packages/llvm/src/tests/variable_declaration/let_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x_ = alloca i1, align 1
  store i1 true, i1* %x_, align 1
  ret void
}

